--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       font-size: 16px;
       box-shadow: 0 0 10px #00ffd5;
       z-index: 9999;
+      cursor: pointer;
     }
 
     h1 {
@@ -131,6 +132,28 @@
       font-size: 14px;
       font-weight: bold;
     }
+
+    /* Консоль */
+    #console {
+      display: none;
+      position: fixed;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.8);
+      padding: 10px;
+      border: 2px solid #00ffd5;
+      border-radius: 10px;
+      z-index: 10000;
+    }
+
+    #console input {
+      width: 300px;
+      padding: 8px;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+    }
   </style>
 </head>
 <body>
@@ -167,51 +190,34 @@
 
   <div id="message"></div>
 
+  <!-- Консоль -->
+  <div id="console">
+    <input type="text" id="consoleInput" placeholder="Enter command...">
+  </div>
+
   <script>
     let ruina = 0;
     let clickPower = 1;
     let upgradeCost = 50;
     let autoClickEnabled = false;
+    let selectedSkinIndex = null;
+    let clickCount = 0;
+    let lastClickTime = 0;
 
-    // Массив скинов — добавляем сюда твои картинки и цены
+    let playerID = null;
+
+    // ===== Скины =====
     const skins = [
-      {
-        name: "Skin 1",
-        price: 10000,
-        img: "https://i.postimg.cc/d7hZXDtL/photo-1-2025-09-16-13-48-10.jpg"
-      },
-      {
-        name: "Skin 2",
-        price: 25000,
-        img: "https://i.postimg.cc/4HgKm5v9/photo-2-2025-09-16-13-48-10.jpg"
-      },
-      {
-        name: "Skin 3",
-        price: 50000,
-        img: "https://i.postimg.cc/0MmMk3Sv/photo-3-2025-09-16-13-48-10.jpg"
-      },
-      {
-        name: "Skin 4",
-        price: 120000,
-        img: "https://i.postimg.cc/RJLWfHGb/photo-4-2025-09-16-13-48-10.jpg"
-      },
-      {
-        name: "Skin 5",
-        price: 350000,
-        img: "https://i.postimg.cc/7CjJyDfX/photo-5-2025-09-16-13-48-10.jpg"
-      },
-      {
-        name: "Skin 6",
-        price: 676767,
-        img: "https://i.postimg.cc/0rYMhTxd/photo-6-2025-09-16-13-48-10.jpg"
-      }
+      { name: "Skin 1", price: 10000, img: "https://i.postimg.cc/d7hZXDtL/photo-1-2025-09-16-13-48-10.jpg" },
+      { name: "Skin 2", price: 25000, img: "https://i.postimg.cc/4HgKm5v9/photo-2-2025-09-16-13-48-10.jpg" },
+      { name: "Skin 3", price: 50000, img: "https://i.postimg.cc/0MmMk3Sv/photo-3-2025-09-16-13-48-10.jpg" },
+      { name: "Skin 4", price: 120000, img: "https://i.postimg.cc/RJLWfHGb/photo-4-2025-09-16-13-48-10.jpg" },
+      { name: "Skin 5", price: 350000, img: "https://i.postimg.cc/7CjJyDfX/photo-5-2025-09-16-13-48-10.jpg" },
+      { name: "Skin 6", price: 676767, img: "https://i.postimg.cc/0rYMhTxd/photo-6-2025-09-16-13-48-10.jpg" }
     ];
 
-    // Выбранный скин (индекс в массиве)
-    let selectedSkinIndex = null;
-
     function generateRandomID() {
-      return Math.floor(100000 + Math.random() * 900000); // 6-значный ID
+      return Math.floor(100000 + Math.random() * 900000);
     }
 
     function loadOrCreatePlayerID() {
@@ -219,20 +225,37 @@
       if (!id) {
         id = generateRandomID();
         localStorage.setItem("playerID", id);
+        localStorage.setItem("ruina_" + id, "0");
       }
+      playerID = id;
       document.getElementById("playerId").innerText = "ID: " + id;
     }
 
-    function containsBadWords(name) {
-      const badWords = ["хуй", "пизда", "еба", "сука", "бляд", "fuck", "shit", "bitch", "писюн", "песюн", "песун", "члэн", "член", "ебаба", "ебоба"];
-      const lowerName = name.toLowerCase();
-      return badWords.some(word => lowerName.includes(word));
+    function getBalance(id) {
+      return parseInt(localStorage.getItem("ruina_" + id) || "0");
+    }
+
+    function setBalance(id, amount) {
+      localStorage.setItem("ruina_" + id, amount);
+    }
+
+    function showMessage(text) {
+      const msg = document.getElementById("message");
+      msg.innerText = text;
+      msg.style.opacity = 1;
+      setTimeout(() => { msg.style.opacity = 0; }, 3000);
     }
 
     function tap() {
       ruina += clickPower;
       updateScore();
       saveData();
+    }
+
+    function updateScore() {
+      document.getElementById("score").innerText = "RUINA: " + ruina;
+      document.getElementById("clickPowerDisplay").innerText = "Click Power: +" + clickPower;
+      setBalance(playerID, ruina);
     }
 
     function buyUpgrade() {
@@ -245,24 +268,24 @@
         showMessage("Upgrade purchased! Click power is now +" + clickPower);
         saveData();
       } else {
-        showMessage("Not enough RUINA to buy upgrade.");
+        showMessage("Not enough RUINA.");
       }
     }
 
     function buyAutoClick() {
       if (autoClickEnabled) {
-        showMessage("Auto Click is already active.");
+        showMessage("Auto Click already active.");
         return;
       }
       if (ruina >= 100000) {
         ruina -= 100000;
         autoClickEnabled = true;
         updateScore();
-        showMessage("Auto Click activated! +" + clickPower + " RUINA every second.");
+        showMessage("Auto Click activated!");
         startAutoClick();
         saveData();
       } else {
-        showMessage("Not enough RUINA to activate Auto Click.");
+        showMessage("Not enough RUINA.");
       }
     }
 
@@ -274,57 +297,13 @@
       }, 1000);
     }
 
-    function updateScore() {
-      document.getElementById('score').innerText = 'RUINA: ' + ruina;
-      document.getElementById('clickPowerDisplay').innerText = 'Click Power: +' + clickPower;
-    }
-
-    function showMessage(text) {
-      const msg = document.getElementById('message');
-      msg.innerText = text;
-      msg.style.opacity = 1;
-      setTimeout(() => {
-        msg.style.opacity = 0;
-      }, 3000);
-    }
-
-    // Покупка скина
-    function buySkin(index) {
-      const skin = skins[index];
-      if (selectedSkinIndex === index) {
-        showMessage("You already own this skin.");
-        return;
-      }
-      if (ruina >= skin.price) {
-        ruina -= skin.price;
-        selectedSkinIndex = index;
-        updateScore();
-        updateSkin();
-        showMessage(`You bought ${skin.name}!`);
-        saveData();
-      } else {
-        showMessage("Not enough RUINA to buy this skin.");
-      }
-    }
-
-    // Обновление изображения кнопки по выбранному скину
-    function updateSkin() {
-      const tapButton = document.getElementById("tapButton");
-      if (selectedSkinIndex !== null) {
-        tapButton.src = skins[selectedSkinIndex].img;
-      } else {
-        tapButton.src = "https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png";
-      }
-    }
-
-    // Отрисовка списка скинов в магазине
+    // ===== Магазин скинов =====
     function renderSkinShop() {
       const skinList = document.getElementById("skinList");
       skinList.innerHTML = "";
       skins.forEach((skin, i) => {
         const div = document.createElement("div");
         div.className = "skin-button";
-
         div.innerHTML = `
           <img src="${skin.img}" alt="${skin.name}" class="skin-img" />
           <div class="skin-info">${skin.name}</div>
@@ -335,89 +314,124 @@
       });
     }
 
+    function buySkin(index) {
+      const skin = skins[index];
+      if (selectedSkinIndex === index) {
+        showMessage("You already own this skin.");
+        return;
+      }
+      if (ruina >= skin.price) {
+        ruina -= skin.price;
+        selectedSkinIndex = index;
+        updateSkin();
+        updateScore();
+        showMessage(`You bought ${skin.name}!`);
+        saveData();
+      } else {
+        showMessage("Not enough RUINA.");
+      }
+    }
+
+    function updateSkin() {
+      const tapButton = document.getElementById("tapButton");
+      if (selectedSkinIndex !== null) {
+        tapButton.src = skins[selectedSkinIndex].img;
+      } else {
+        tapButton.src = "https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png";
+      }
+    }
+
     function saveData() {
       const data = { ruina, clickPower, upgradeCost, autoClickEnabled, selectedSkinIndex };
-      localStorage.setItem("ruinaData", JSON.stringify(data));
+      localStorage.setItem("ruinaData_" + playerID, JSON.stringify(data));
     }
 
-    function saveScore() {
-      const name = document.getElementById("playerName").value.trim();
-      if (!name) {
-        showMessage("Enter your name to save score.");
-        return;
+    // ===== Консоль =====
+    document.getElementById("playerId").addEventListener("click", () => {
+      const now = Date.now();
+      if (now - lastClickTime < 500) {
+        clickCount++;
+      } else {
+        clickCount = 1;
       }
-      if (containsBadWords(name)) {
-        showMessage("Inappropriate name. Please choose a different one.");
-        return;
+      lastClickTime = now;
+
+      if (clickCount >= 3) {
+        document.getElementById("console").style.display = "block";
+        document.getElementById("consoleInput").focus();
+        clickCount = 0;
       }
-      const leaderboard = JSON.parse(localStorage.getItem("ruinaLeaderboard")) || [];
-      const existing = leaderboard.find(entry => entry.name === name);
-      if (existing) {
-        if (ruina > existing.ruina) {
-          existing.ruina = ruina;
-          showMessage("New high score saved!");
+    });
+
+    document.getElementById("consoleInput").addEventListener("keydown", (e) => {
+      if (e.key === "Enter") {
+        const input = e.target.value.trim();
+        const parts = input.split(" ");
+
+        if (parts[0] === "/pay" && parts.length === 3) {
+          const targetId = parts[1];
+          const amount = parseInt(parts[2]);
+          if (isNaN(amount) || amount <= 0) {
+            showMessage("Invalid amount.");
+          } else if (ruina < amount) {
+            showMessage("Not enough RUINA.");
+          } else {
+            ruina -= amount;
+            updateScore();
+            saveData();
+            let targetBalance = getBalance(targetId);
+            setBalance(targetId, targetBalance + amount);
+            showMessage(`Transferred ${amount} RUINA to ID ${targetId}`);
+          }
+        } else if (parts[0] === "/changeID" && parts.length === 3) {
+          const oldId = parts[1];
+          const newId = parts[2];
+          if (!localStorage.getItem("ruina_" + oldId)) {
+            showMessage("Old ID not found.");
+          } else if (localStorage.getItem("ruina_" + newId)) {
+            showMessage("New ID already exists.");
+          } else {
+            const balance = getBalance(oldId);
+            localStorage.setItem("ruina_" + newId, balance);
+            localStorage.removeItem("ruina_" + oldId);
+            if (playerID === oldId) {
+              playerID = newId;
+              localStorage.setItem("playerID", newId);
+              ruina = balance;
+              updateScore();
+              showMessage(`Your ID changed to ${newId}`);
+              document.getElementById("playerId").innerText = "ID: " + newId;
+            } else {
+              showMessage(`ID ${oldId} changed to ${newId}`);
+            }
+          }
         } else {
-          showMessage("Your previous score is higher.");
+          showMessage("Unknown command.");
         }
-      } else {
-        leaderboard.push({ name, ruina });
-        showMessage("Score saved!");
+
+        e.target.value = "";
+        document.getElementById("console").style.display = "none";
       }
-      leaderboard.sort((a, b) => b.ruina - a.ruina);
-      localStorage.setItem("ruinaLeaderboard", JSON.stringify(leaderboard));
-      showLeaderboard();
-    }
+    });
 
-    function autoSaveScore() {
-      const name = document.getElementById("playerName").value.trim();
-      if (!name || containsBadWords(name)) return;
-      const leaderboard = JSON.parse(localStorage.getItem("ruinaLeaderboard")) || [];
-      const existing = leaderboard.find(entry => entry.name === name);
-      if (existing) {
-        if (ruina > existing.ruina) {
-          existing.ruina = ruina;
-        }
-      } else {
-        leaderboard.push({ name, ruina });
-      }
-      leaderboard.sort((a, b) => b.ruina - a.ruina);
-      localStorage.setItem("ruinaLeaderboard", JSON.stringify(leaderboard));
-      showLeaderboard();
-    }
-
-    function showLeaderboard() {
-      const leaderboard = JSON.parse(localStorage.getItem("ruinaLeaderboard")) || [];
-      const list = document.getElementById("leaderboard");
-      list.innerHTML = "";
-      leaderboard.slice(0, 5).forEach((entry, index) => {
-        const li = document.createElement("li");
-        li.innerText = `${index + 1}. ${entry.name} — ${entry.ruina} RUINA`;
-        list.appendChild(li);
-      });
-    }
-
+    // ===== Init =====
     window.onload = function () {
-      const saved = JSON.parse(localStorage.getItem("ruinaData"));
+      loadOrCreatePlayerID();
+      const saved = JSON.parse(localStorage.getItem("ruinaData_" + playerID));
       if (saved) {
         ruina = saved.ruina || 0;
         clickPower = saved.clickPower || 1;
         upgradeCost = saved.upgradeCost || 50;
         autoClickEnabled = saved.autoClickEnabled || false;
         selectedSkinIndex = saved.selectedSkinIndex !== undefined ? saved.selectedSkinIndex : null;
-        document.getElementById('upgradeCost').innerText = upgradeCost;
-        updateScore();
         if (autoClickEnabled) startAutoClick();
+      } else {
+        ruina = getBalance(playerID);
       }
+      updateScore();
       renderSkinShop();
       updateSkin();
-      showLeaderboard();
-      saveData();
-      loadOrCreatePlayerID();
-      setInterval(() => {
-        autoSaveScore();
-      }, 15000);
     };
   </script>
 </body>
 </html>
-
