--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
       margin: 4px 0;
     }
 
-    /* Доп стили для скинов */
     .skin-button {
       display: inline-block;
       margin: 10px;
@@ -135,24 +134,24 @@
 
     /* Консоль */
     #console {
-      display: none;
       position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0,0,0,0.8);
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0,0,0,0.9);
+      border-top: 2px solid #00ffd5;
       padding: 10px;
-      border: 2px solid #00ffd5;
-      border-radius: 10px;
+      display: none;
       z-index: 10000;
     }
-
-    #console input {
-      width: 300px;
-      padding: 8px;
-      border-radius: 5px;
-      border: none;
-      outline: none;
+    #consoleInput {
+      width: 95%;
+      padding: 10px;
+      background: #111;
+      border: 2px solid #00ffd5;
+      border-radius: 8px;
+      color: #00ffd5;
+      font-size: 16px;
     }
   </style>
 </head>
@@ -163,7 +162,6 @@
   <div id="score">RUINA: 0</div>
   <div id="clickPowerDisplay">Click Power: +1</div>
 
-  <!-- Tap Button Image -->
   <img id="tapButton" src="https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png" alt="RUINA Button" class="tap-image" onclick="tap()">
 
   <div class="shop">
@@ -172,7 +170,6 @@
     <button class="shop-button" onclick="buyAutoClick()">Enable Auto Click — 100,000 RUINA</button>
   </div>
 
-  <!-- Skin Shop -->
   <div class="shop">
     <h2>Skin Shop</h2>
     <div id="skinList"></div>
@@ -192,7 +189,7 @@
 
   <!-- Консоль -->
   <div id="console">
-    <input type="text" id="consoleInput" placeholder="Enter command...">
+    <input type="text" id="consoleInput" placeholder="Введите команду..." />
   </div>
 
   <script>
@@ -200,13 +197,7 @@
     let clickPower = 1;
     let upgradeCost = 50;
     let autoClickEnabled = false;
-    let selectedSkinIndex = null;
-    let clickCount = 0;
-    let lastClickTime = 0;
 
-    let playerID = null;
-
-    // ===== Скины =====
     const skins = [
       { name: "Skin 1", price: 10000, img: "https://i.postimg.cc/d7hZXDtL/photo-1-2025-09-16-13-48-10.jpg" },
       { name: "Skin 2", price: 25000, img: "https://i.postimg.cc/4HgKm5v9/photo-2-2025-09-16-13-48-10.jpg" },
@@ -215,6 +206,8 @@
       { name: "Skin 5", price: 350000, img: "https://i.postimg.cc/7CjJyDfX/photo-5-2025-09-16-13-48-10.jpg" },
       { name: "Skin 6", price: 676767, img: "https://i.postimg.cc/0rYMhTxd/photo-6-2025-09-16-13-48-10.jpg" }
     ];
+
+    let selectedSkinIndex = null;
 
     function generateRandomID() {
       return Math.floor(100000 + Math.random() * 900000);
@@ -225,37 +218,14 @@
       if (!id) {
         id = generateRandomID();
         localStorage.setItem("playerID", id);
-        localStorage.setItem("ruina_" + id, "0");
       }
-      playerID = id;
       document.getElementById("playerId").innerText = "ID: " + id;
-    }
-
-    function getBalance(id) {
-      return parseInt(localStorage.getItem("ruina_" + id) || "0");
-    }
-
-    function setBalance(id, amount) {
-      localStorage.setItem("ruina_" + id, amount);
-    }
-
-    function showMessage(text) {
-      const msg = document.getElementById("message");
-      msg.innerText = text;
-      msg.style.opacity = 1;
-      setTimeout(() => { msg.style.opacity = 0; }, 3000);
     }
 
     function tap() {
       ruina += clickPower;
       updateScore();
       saveData();
-    }
-
-    function updateScore() {
-      document.getElementById("score").innerText = "RUINA: " + ruina;
-      document.getElementById("clickPowerDisplay").innerText = "Click Power: +" + clickPower;
-      setBalance(playerID, ruina);
     }
 
     function buyUpgrade() {
@@ -268,13 +238,13 @@
         showMessage("Upgrade purchased! Click power is now +" + clickPower);
         saveData();
       } else {
-        showMessage("Not enough RUINA.");
+        showMessage("Not enough RUINA to buy upgrade.");
       }
     }
 
     function buyAutoClick() {
       if (autoClickEnabled) {
-        showMessage("Auto Click already active.");
+        showMessage("Auto Click is already active.");
         return;
       }
       if (ruina >= 100000) {
@@ -297,7 +267,44 @@
       }, 1000);
     }
 
-    // ===== Магазин скинов =====
+    function updateScore() {
+      document.getElementById('score').innerText = 'RUINA: ' + ruina;
+      document.getElementById('clickPowerDisplay').innerText = 'Click Power: +' + clickPower;
+    }
+
+    function showMessage(text) {
+      const msg = document.getElementById('message');
+      msg.innerText = text;
+      setTimeout(() => { msg.innerText = ""; }, 3000);
+    }
+
+    function buySkin(index) {
+      const skin = skins[index];
+      if (selectedSkinIndex === index) {
+        showMessage("You already own this skin.");
+        return;
+      }
+      if (ruina >= skin.price) {
+        ruina -= skin.price;
+        selectedSkinIndex = index;
+        updateScore();
+        updateSkin();
+        showMessage(`You bought ${skin.name}!`);
+        saveData();
+      } else {
+        showMessage("Not enough RUINA to buy this skin.");
+      }
+    }
+
+    function updateSkin() {
+      const tapButton = document.getElementById("tapButton");
+      if (selectedSkinIndex !== null) {
+        tapButton.src = skins[selectedSkinIndex].img;
+      } else {
+        tapButton.src = "https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png";
+      }
+    }
+
     function renderSkinShop() {
       const skinList = document.getElementById("skinList");
       skinList.innerHTML = "";
@@ -314,123 +321,101 @@
       });
     }
 
-    function buySkin(index) {
-      const skin = skins[index];
-      if (selectedSkinIndex === index) {
-        showMessage("You already own this skin.");
-        return;
-      }
-      if (ruina >= skin.price) {
-        ruina -= skin.price;
-        selectedSkinIndex = index;
-        updateSkin();
-        updateScore();
-        showMessage(`You bought ${skin.name}!`);
-        saveData();
-      } else {
-        showMessage("Not enough RUINA.");
-      }
-    }
-
-    function updateSkin() {
-      const tapButton = document.getElementById("tapButton");
-      if (selectedSkinIndex !== null) {
-        tapButton.src = skins[selectedSkinIndex].img;
-      } else {
-        tapButton.src = "https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png";
-      }
-    }
-
     function saveData() {
       const data = { ruina, clickPower, upgradeCost, autoClickEnabled, selectedSkinIndex };
-      localStorage.setItem("ruinaData_" + playerID, JSON.stringify(data));
+      localStorage.setItem("ruinaData", JSON.stringify(data));
+    }
+
+    function saveScore() {
+      const name = document.getElementById("playerName").value.trim();
+      if (!name) { showMessage("Enter your name to save score."); return; }
+      const leaderboard = JSON.parse(localStorage.getItem("ruinaLeaderboard")) || [];
+      const existing = leaderboard.find(entry => entry.name === name);
+      if (existing) {
+        if (ruina > existing.ruina) existing.ruina = ruina;
+      } else {
+        leaderboard.push({ name, ruina });
+      }
+      leaderboard.sort((a, b) => b.ruina - a.ruina);
+      localStorage.setItem("ruinaLeaderboard", JSON.stringify(leaderboard));
+      showLeaderboard();
+      showMessage("Score saved!");
+    }
+
+    function showLeaderboard() {
+      const leaderboard = JSON.parse(localStorage.getItem("ruinaLeaderboard")) || [];
+      const list = document.getElementById("leaderboard");
+      list.innerHTML = "";
+      leaderboard.slice(0, 5).forEach((entry, i) => {
+        const li = document.createElement("li");
+        li.innerText = `${i+1}. ${entry.name} — ${entry.ruina} RUINA`;
+        list.appendChild(li);
+      });
     }
 
     // ===== Консоль =====
-    document.getElementById("playerId").addEventListener("click", () => {
-      const now = Date.now();
-      if (now - lastClickTime < 500) {
-        clickCount++;
+    document.getElementById("playerId").addEventListener("dblclick", () => {
+      const consoleEl = document.getElementById("console");
+      if (consoleEl.style.display === "block") {
+        consoleEl.style.display = "none";
       } else {
-        clickCount = 1;
-      }
-      lastClickTime = now;
-
-      if (clickCount >= 3) {
-        document.getElementById("console").style.display = "block";
+        consoleEl.style.display = "block";
         document.getElementById("consoleInput").focus();
-        clickCount = 0;
       }
     });
 
     document.getElementById("consoleInput").addEventListener("keydown", (e) => {
       if (e.key === "Enter") {
         const input = e.target.value.trim();
-        const parts = input.split(" ");
-
-        if (parts[0] === "/pay" && parts.length === 3) {
-          const targetId = parts[1];
-          const amount = parseInt(parts[2]);
-          if (isNaN(amount) || amount <= 0) {
-            showMessage("Invalid amount.");
-          } else if (ruina < amount) {
-            showMessage("Not enough RUINA.");
-          } else {
-            ruina -= amount;
-            updateScore();
-            saveData();
-            let targetBalance = getBalance(targetId);
-            setBalance(targetId, targetBalance + amount);
-            showMessage(`Transferred ${amount} RUINA to ID ${targetId}`);
-          }
-        } else if (parts[0] === "/changeID" && parts.length === 3) {
-          const oldId = parts[1];
-          const newId = parts[2];
-          if (!localStorage.getItem("ruina_" + oldId)) {
-            showMessage("Old ID not found.");
-          } else if (localStorage.getItem("ruina_" + newId)) {
-            showMessage("New ID already exists.");
-          } else {
-            const balance = getBalance(oldId);
-            localStorage.setItem("ruina_" + newId, balance);
-            localStorage.removeItem("ruina_" + oldId);
-            if (playerID === oldId) {
-              playerID = newId;
-              localStorage.setItem("playerID", newId);
-              ruina = balance;
-              updateScore();
-              showMessage(`Your ID changed to ${newId}`);
-              document.getElementById("playerId").innerText = "ID: " + newId;
-            } else {
-              showMessage(`ID ${oldId} changed to ${newId}`);
-            }
-          }
-        } else {
-          showMessage("Unknown command.");
-        }
-
+        handleConsoleCommand(input);
         e.target.value = "";
-        document.getElementById("console").style.display = "none";
       }
     });
 
-    // ===== Init =====
+    function handleConsoleCommand(cmd) {
+      const args = cmd.split(" ");
+      if (args[0] === "/pay" && args.length === 3) {
+        const targetID = args[1];
+        const amount = parseInt(args[2]);
+        if (ruina >= amount) {
+          ruina -= amount;
+          updateScore();
+          saveData();
+          showMessage(`Sent ${amount} RUINA to ID: ${targetID}`);
+        } else {
+          showMessage("Not enough RUINA.");
+        }
+      } else if (args[0] === "/changeID" && args.length === 3) {
+        const oldID = localStorage.getItem("playerID");
+        if (oldID === args[1]) {
+          localStorage.setItem("playerID", args[2]);
+          document.getElementById("playerId").innerText = "ID: " + args[2];
+          showMessage("ID changed successfully!");
+        } else {
+          showMessage("Old ID does not match.");
+        }
+      } else {
+        showMessage("Unknown command.");
+      }
+    }
+
     window.onload = function () {
-      loadOrCreatePlayerID();
-      const saved = JSON.parse(localStorage.getItem("ruinaData_" + playerID));
+      const saved = JSON.parse(localStorage.getItem("ruinaData"));
       if (saved) {
         ruina = saved.ruina || 0;
         clickPower = saved.clickPower || 1;
         upgradeCost = saved.upgradeCost || 50;
         autoClickEnabled = saved.autoClickEnabled || false;
         selectedSkinIndex = saved.selectedSkinIndex !== undefined ? saved.selectedSkinIndex : null;
+        document.getElementById('upgradeCost').innerText = upgradeCost;
+        updateScore();
         if (autoClickEnabled) startAutoClick();
-      } else {
-        ruina = getBalance(playerID);
       }
-      updateScore();
       renderSkinShop();
       updateSkin();
+      showLeaderboard();
+      saveData();
+      loadOrCreatePlayerID();
     };
   </script>
 </body>
